# JSP

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  update_assets.sh  update_engine.sh
assets/: lang.csv
assets/fonts/: LICENSE.txt
assets/models/: cube.fbx  neptune.fbx  planetbase.fbx  uranus.fbx
assets/scenes/: assembly.scene  builder_wip.scene  debug.scene  halcyon.scene  launchsite.scene  menu.scene  space.scene
assets/shaders/: atmosphere_frag.glsl  barrier_frag.glsl  blackhole_frag.glsl  blueprint_frag.glsl  default_vert.glsl  fog_frag.glsl  line_frag.glsl  line_vert.glsl  post_frag.glsl  water_frag.glsl
game/: CMakeLists.txt
game/cmake/: httplib.cmake  sgp4.cmake
game/include/: game.h  gamemode.h  grid.h  level.h  planetRegistry.h  selector.h  ui.h
game/include/audio/: audioManager.h
game/include/components/: PlanetComponent.h  SatellitePropagatorComponent.h  planetComponent.h
game/include/gamemodes/: campaign.h  credits.h  explore.h  mainmenu.h  planetbuilder.h  sandbox.h  spacecraftbuilder.h
game/include/levels/: level_1_1.h  level_1_2.h
game/include/moveset/: blueprint.h  cameraorbit.h  firstperson.h  freecamera.h  gravitybased.h
game/include/registries/: halcyonRegistry.h  partsRegistry.h  planetRegistry.h
game/include/simulation/: orbitalManager.h  satelliteManager.h
game/include/ui/: selector.h  ui.h
game/src/: game.cpp  main.cpp
game/src/components/: planetComponent.cpp
game/src/gamemodes/: campaing.cpp  explore.cpp  planetbuilder.cpp  sandbox.cpp  spacecraftbuilder.cpp
game/src/simulation/: satelliteManager.cpp
utils/: imageToSkybox.py
(+38 files in other folders)
